--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,7 +44,7 @@
         app:layout_constraintStart_toStartOf="@id/profile_image_bg"
         app:layout_constraintEnd_toEndOf="@id/profile_image_bg"
         app:layout_constraintBottom_toBottomOf="@id/profile_image_bg" />
-    
+
     <TextView
         android:id="@+id/username_text"
         android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
 
 
 
-    <TextView
+    <EditText
         android:id="@+id/bio_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
