--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -69,6 +69,8 @@
             android:layout_marginBottom="13dp"/>
 
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,6 +89,13 @@
                 android:layout_height="wrap_content"
                 android:text="Please resend"/>
         </LinearLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_back_register"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="100dp"
+            android:backgroundTint="@color/mainYellow"
+            android:text="Back" />
 
 
     </LinearLayout>
