--- a/app/src/main/res/layout/fragment_profile_info.xml
+++ b/app/src/main/res/layout/fragment_profile_info.xml
@@ -92,24 +92,24 @@
                 android:hint="Username"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_marginBottom="16dp"
-            android:paddingTop="15dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusTopStart="12dp">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--            android:layout_marginBottom="16dp"-->
+<!--            android:paddingTop="15dp"-->
+<!--            app:boxCornerRadiusBottomStart="12dp"-->
+<!--            app:boxCornerRadiusBottomEnd="12dp"-->
+<!--            app:boxCornerRadiusTopEnd="12dp"-->
+<!--            app:boxCornerRadiusTopStart="12dp">-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/field_bio"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:hint="Bio"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/field_bio"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="55dp"-->
+<!--                android:hint="Bio"-->
+<!--                android:inputType="text" />-->
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 <!--        <TextView-->
 <!--            android:layout_width="match_parent"-->
