--- a/app/src/main/res/layout/item_room_member.xml
+++ b/app/src/main/res/layout/item_room_member.xml
@@ -30,7 +30,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-
+                android:layout_marginStart="20dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -38,10 +38,10 @@
                     android:id="@+id/username_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:text="Firstname Lastname"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:text="Firstname Lastname" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/member_time"
